# internal/controller/http/v1/translation.go
@@ -7,6 +7,7 @@ import (
 	"github.com/gofiber/fiber/v2"
 	"github.com/meristalis/tg-bot-notes/internal/entity"
 	"github.com/meristalis/tg-bot-notes/internal/usecase"
+	"github.com/meristalis/tg-bot-notes/pkg/httpserver/handler"
 	"github.com/meristalis/tg-bot-notes/pkg/logger"
 )
 
@@ -16,10 +17,10 @@ type translationRoutes struct {
 	v *validator.Validate
 }
 
-func NewTranslationRoutes(apiV1Group fiber.Router, t usecase.Translation, l logger.Interface) {
+func NewTranslationRoutes(apiGroup fiber.Router, t usecase.Translation, l logger.Interface) {
 	r := &translationRoutes{t, l, validator.New(validator.WithRequiredStructEnabled())}
 
-	translationGroup := apiV1Group.Group("/translation")
+	translationGroup := apiGroup.Group("/translation")
 	{
 		translationGroup.Get("/history", r.history)
 		translationGroup.Post("/do-translate", r.doTranslate)
@@ -37,14 +38,14 @@ type historyResponse struct {
 // @Accept      json
 // @Produce     json
 // @Success     200 {object} historyResponse
-// @Failure     500 {object} response
-// @Router      /translation/history [get]
+// @Failure     500 {object} handler.Response
+// @Router      /v1/translation/history [get]
 func (r *translationRoutes) history(ctx *fiber.Ctx) error {
 	translations, err := r.t.History(ctx.UserContext())
 	if err != nil {
 		r.l.Error(err, "http - v1 - history")
 
-		return errorResponse(ctx, http.StatusInternalServerError, "database problems")
+		return handler.ErrorResponse(ctx, http.StatusInternalServerError, "database problems")
 	}
 
 	return ctx.Status(http.StatusOK).JSON(historyResponse{translations})
@@ -64,22 +65,22 @@ type doTranslateRequest struct {
 // @Produce     json
 // @Param       request body doTranslateRequest true "Set up translation"
 // @Success     200 {object} entity.Translation
-// @Failure     400 {object} response
-// @Failure     500 {object} response
-// @Router      /translation/do-translate [post]
+// @Failure     400 {object} handler.Response
+// @Failure     500 {object} handler.Response
+// @Router      /v1/translation/do-translate [post]
 func (r *translationRoutes) doTranslate(ctx *fiber.Ctx) error {
 	var request doTranslateRequest
 
 	if err := ctx.BodyParser(&request); err != nil {
 		r.l.Error(err, "http - v1 - doTranslate")
 
-		return errorResponse(ctx, http.StatusBadRequest, "invalid request body")
+		return handler.ErrorResponse(ctx, http.StatusBadRequest, "invalid request body")
 	}
 
 	if err := r.v.Struct(request); err != nil {
 		r.l.Error(err, "http - v1 - doTranslate")
 
-		return errorResponse(ctx, http.StatusBadRequest, "invalid request body")
+		return handler.ErrorResponse(ctx, http.StatusBadRequest, "invalid request body")
 	}
 
 	translation, err := r.t.Translate(
@@ -93,7 +94,7 @@ func (r *translationRoutes) doTranslate(ctx *fiber.Ctx) error {
 	if err != nil {
 		r.l.Error(err, "http - v1 - doTranslate")
 
-		return errorResponse(ctx, http.StatusInternalServerError, "translation service problems")
+		return handler.ErrorResponse(ctx, http.StatusInternalServerError, "translation service problems")
 	}
 
 	return ctx.Status(http.StatusOK).JSON(translation)
